--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@tabler/icons-react": "^3.29.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.18.1",
